--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "child_process": "^1.0.2",
     "colors": "^1.4.0",
     "connect-flash": "^0.1.1",
+    "discord-buttons": "^4.0.0-deprecated",
     "discord.js": "^12.5.3",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
+    "hastebin-gen": "^2.0.5",
+    "moment": "^2.29.3",
     "mongoose": "^5.12.7",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
